updated about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,4 @@
 <% content_for :title do %>About<% end %>
-<h3>About Foobar Kadigan</h3>
-<p>He was born in Waikikamukau, New Zealand. He left New Zealand for England, excelled at the University of Mopery, and served in the Royal Loamshire Regiment. While in service, he invented the kanuten valve used in the processing of unobtainium for industrial use. He founded Acme Manufacturing, later acquired by the Advent Corporation, to commercialize the product. Mr. Kadigan is now retired and lives in Middlehampton where he raises Griadium frieda.</p>
-<p>His favorite quotation is:</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<h3>About Devin Wieland</h3>
+<p>Hi there. My name is Devin. I'm married to Emily and we have a 10-month-old son named Henrik. My professional background is in marketing with an emphasis on writing.</p>
+<p>I currently work for Into The Wild Marketing (intothewildmarketing.com), a digital advertising agency partner here in Fort Wayne. Took an interest in web development about 6 months ago, and it's taken over ever since... Other interests include reading, writing, cooking, playing drums, playing hockey, and having Emily teach me how to travel.</p>
